add extract links

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
-    "lib": ["es5","es6", "dom"],
+    "lib": ["es5","es6", "dom", "ESNext"],
     "outDir": "./dist",
     "sourceMap": true,
     "noImplicitAny": true,
-    "module": "CommonJS",
-    "target": "ES6",
+    "module": "ESNext",
+    "target": "ESNext",
     "moduleResolution": "node",
     "jsx": "react",
     "esModuleInterop": true
   },
-  "include": ["./src/**/*"]
+  "include": ["./**/*.ts"],
+  "exclude": ["./dist"]
 }
