--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "scraping-rubin-links",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "dev": "ts-node index.ts"
